adding web tests

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,9 +3,9 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
+url=https://benchmarks.ul.com
 platform=*
-browser=NULL
+browser=chrome
 browser_version=NULL
 selenium_host=http://localhost:4444/wd/hub
 custom_capabilities=NULL
@@ -15,7 +15,7 @@ app_version=
 
 #=============== Environment configuration ===========#
 env=DEMO
-DEMO.base=https://www.gsmarena.com
+DEMO.base=https://benchmarks.ul.com
 DEMO.api_url=http://fakerestapi.azurewebsites.net
 STAG.api_url=
 #=====================================================#
