fixed compare test

--- a/src/main/resources/_api.properties
+++ b/src/main/resources/_api.properties
@@ -5,8 +5,7 @@ GetAuthorMethod=GET:${base_url}/api/Authors
 GetAuthorsMethod=GET:${base_url}/api/Authors
 PostAuthorMethod=POST:${base_url}/api/Authors
 DeleteAuthorMethod=DELETE:${base_url}/Authors/1
-
-
-
 PutPostsMethod=PUT:${base_url}/posts/1
 PatchPostsMethod=PATCH:${base_url}/posts/1
+
+PostUsersMethod=POST:${base_url}/api/Users
