finished demo testing

--- a/src/main/resources/_api.properties
+++ b/src/main/resources/_api.properties
@@ -8,4 +8,12 @@ DeleteAuthorMethod=DELETE:${base_url}/Authors/1
 PutPostsMethod=PUT:${base_url}/posts/1
 PatchPostsMethod=PATCH:${base_url}/posts/1
 
+PostAlbumMethod=POST:${base_url}/albums
+GetAlbumsMethod=GET:${base_url}/albums
+GetAlbumMethod=GET:${base_url}/albums
+
+
 PostUsersMethod=POST:${base_url}/api/Users
+GetUserMethod=GET:${base_url}/api/Users
+GetUsersMethod=GET:${base_url}/api/Users
+
